<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_por1"
            android:title="@string/menu_por1" />
        <item
            android:id="@+id/nav_por2"
            android:title="@string/menu_por2"/>
        <item
            android:id="@+id/nav_por3"
            android:title="@string/menu_por3" />
        <item
            android:id="@+id/nav_por4"
            android:title="@string/menu_por4" />

        <item
            android:id="@+id/nav_por5"
            android:title="@string/menu_por5" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
